[gd_scene load_steps=40 format=3 uid="uid://b7wtswuue502b"]

[ext_resource type="Script" path="res://Scripts/fox_transparent.gd" id="1_42c6y"]
[ext_resource type="Texture2D" uid="uid://dpb41qs2m8v3d" path="res://Assets/Food/Fox Sprite Sheet 28x20 RED.png" id="1_fh6lg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1s3kp"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2agd7"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai6on"]
atlas = ExtResource("1_fh6lg")
region = Rect2(56, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq4mh"]
atlas = ExtResource("1_fh6lg")
region = Rect2(84, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbnfd"]
atlas = ExtResource("1_fh6lg")
region = Rect2(112, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8av4"]
atlas = ExtResource("1_fh6lg")
region = Rect2(140, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uiyx"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 20, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_d14kw"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 20, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar60x"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2csi"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_o22o0"]
atlas = ExtResource("1_fh6lg")
region = Rect2(56, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmpfg"]
atlas = ExtResource("1_fh6lg")
region = Rect2(84, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c45q"]
atlas = ExtResource("1_fh6lg")
region = Rect2(112, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkyov"]
atlas = ExtResource("1_fh6lg")
region = Rect2(140, 40, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibnvc"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 0, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl8ap"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 0, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl35a"]
atlas = ExtResource("1_fh6lg")
region = Rect2(56, 0, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnu01"]
atlas = ExtResource("1_fh6lg")
region = Rect2(84, 0, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvxyy"]
atlas = ExtResource("1_fh6lg")
region = Rect2(112, 0, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul3xn"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 20, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_7od7p"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 20, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsayt"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 60, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_utb1f"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 60, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fghjj"]
atlas = ExtResource("1_fh6lg")
region = Rect2(56, 60, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyl2s"]
atlas = ExtResource("1_fh6lg")
region = Rect2(84, 60, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8wsu"]
atlas = ExtResource("1_fh6lg")
region = Rect2(112, 60, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sd5d"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 80, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5frxo"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 80, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh5hn"]
atlas = ExtResource("1_fh6lg")
region = Rect2(0, 100, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6mrn"]
atlas = ExtResource("1_fh6lg")
region = Rect2(28, 100, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_24p2s"]
atlas = ExtResource("1_fh6lg")
region = Rect2(56, 100, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cns0"]
atlas = ExtResource("1_fh6lg")
region = Rect2(84, 100, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n25d"]
atlas = ExtResource("1_fh6lg")
region = Rect2(112, 100, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_xax5t"]
atlas = ExtResource("1_fh6lg")
region = Rect2(140, 100, 28, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sfje"]
atlas = ExtResource("1_fh6lg")
region = Rect2(168, 100, 28, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_ju2fm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s3kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2agd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai6on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq4mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbnfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8av4")
}],
"loop": true,
"name": &"exhausted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uiyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d14kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar60x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2csi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o22o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmpfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c45q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkyov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d14kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uiyx")
}],
"loop": false,
"name": &"food",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibnvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl8ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl35a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnu01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvxyy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul3xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7od7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul3xn")
}],
"loop": false,
"name": &"pet",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsayt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utb1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fghjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyl2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8wsu")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sd5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5frxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh5hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6mrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24p2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cns0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n25d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xax5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sfje")
}],
"loop": true,
"name": &"vanish",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vxa5"]
size = Vector2(286, 189)

[node name="FoxTransparent" type="Node2D"]
script = ExtResource("1_42c6y")

[node name="StaticBody2D" type="Area2D" parent="."]
position = Vector2(150, 100)
collision_layer = 255
collision_mask = 255

[node name="Fox" type="AnimatedSprite2D" parent="StaticBody2D"]
texture_filter = 1
texture_repeat = 1
scale = Vector2(12.85, 12.85)
sprite_frames = SubResource("SpriteFrames_ju2fm")
animation = &"food"
autoplay = "idle"
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_8vxa5")

[node name="FoodMarker" type="Marker2D" parent="."]
position = Vector2(280, 222)

[connection signal="input_event" from="StaticBody2D" to="." method="_on_static_body_2d_input_event"]
[connection signal="animation_finished" from="StaticBody2D/Fox" to="." method="_on_fox_animation_finished"]
